--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                     </div>
                 </div>
             </div>
+            <footer> <a href="https://github.com/e7hannah/weather-app" target="_blank" id="footer-link">Open-source code</a> by Hannah Elliott</footer>
         </div>
     </div>
 </body>
